# LingLun

./: LICENSE  README.md  process_data.py  pyproject.toml
conf/: config.yaml
conf/model/: default.yaml
conf/tokenizer/: music_transformer.yaml  pretrain_local.yaml  remi_custom.yaml  remi_default.yaml
linglun/: exceptions.py  preprocess.py  process_data.py
linglun/data/: midi_parser.py  preprocess.py
linglun/examples/: relative_position_embedding.ipynb
linglun/model/: layers.py
linglun/tokenizers/: music_transformer.py
